--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "eleventy",
   "version": "1.0.0",
-  "description": "",
+  "description": "Basic starter for building eleventy sites—with an Alpine, Turbo, Tailwind stack.",
   "main": "index.js",
   "scripts": {
-    "start": "eleventy --serve & npx tailwindcss -i src/site/assets/tailwind.css -c tailwind.config.js -o dist/assets/style.css --watch",
+    "start": "eleventy --serve --port=3000 & npx tailwindcss -i src/site/assets/tailwind.css -c tailwind.config.js -o dist/assets/style.css --watch",
     "build": "ELEVENTY_PRODUCTION=true eleventy && NODE_ENV=production npx tailwindcss -i src/site/assets/tailwind.css -c tailwind.config.js -o dist/assets/style.css --minify"
   },
   "keywords": [],
