--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.0",
+    "eleventy-plugin-ghost": "^1.3.3",
+    "@11ty/eleventy": "^2.0.0-canary.3",
     "@hotwired/turbo": "^7.1.0",
     "@tailwindcss/typography": "^0.5.2",
     "alpinejs": "^3.9.1",
