--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "eleventy --serve --port=3000 & npx tailwindcss -i src/site/assets/tailwind.css -c tailwind.config.js -o dist/assets/style.css --watch",
-    "build": "ELEVENTY_PRODUCTION=true eleventy && NODE_ENV=production npx tailwindcss -i src/site/assets/tailwind.css -c tailwind.config.js -o dist/assets/style.css --minify"
+    "build": "ELEVENTY_PRODUCTION=true eleventy --incremental && NODE_ENV=production npx tailwindcss -i src/site/assets/tailwind.css -c tailwind.config.js -o dist/assets/style.css --minify"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +14,9 @@
     "eleventy-plugin-ghost": "^1.3.3",
     "@11ty/eleventy": "^2.0.0-canary.3",
     "@hotwired/turbo": "^7.1.0",
+    "html-minifier": "^4.0.0",
     "@tailwindcss/typography": "^0.5.2",
     "alpinejs": "^3.9.1",
-    "html-minifier": "^4.0.0",
     "js-yaml": "^4.1.0",
     "liquidjs": "^9.33.0",
     "luxon": "^2.3.1",
