--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "eleventy-plugin-ghost": "^1.3.3",
     "@11ty/eleventy": "^2.0.0-canary.3",
     "@hotwired/turbo": "^7.1.0",
