--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "liquidjs": "^9.33.0",
     "luxon": "^2.4.0",
     "tailwindcss": "^3.0.23",
-    "toml": "^3.0.0"
+    "toml": "^3.0.0",
+    "@tryghost/content-api": "^1.4.1",
+    "chalk": "^4.0.0",
+    "fs-extra": "^8.1.0",
+    "node-fetch": "^2.6.0"
   }
 }
