--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
     "@jamshop/eleventy-filter-dump": "^1.0.4",
     "@tailwindcss/forms": "^0.5.1",
     "@tailwindcss/typography": "^0.5.2",
+    "@tryghost/content-api": "^1.4.1",
     "alpinejs": "^3.9.1",
+    "chalk": "^4.0.0",
     "debug": "^4.3.4",
     "eleventy-plugin-time-to-read": "^1.2.0",
+    "eleventy-xml-plugin": "^0.1.0",
+    "fs-extra": "^8.1.0",
     "html-minifier": "^4.0.0",
     "js-yaml": "^4.1.0",
     "liquidjs": "^9.33.0",
     "luxon": "^2.4.0",
+    "node-fetch": "^2.6.0",
     "tailwindcss": "^3.0.23",
-    "toml": "^3.0.0",
-    "@tryghost/content-api": "^1.4.1",
-    "chalk": "^4.0.0",
-    "fs-extra": "^8.1.0",
-    "node-fetch": "^2.6.0"
+    "toml": "^3.0.0"
   }
 }
