--- a/src/site/_data/site.yaml
+++ b/src/site/_data/site.yaml
@@ -72,3 +72,7 @@ nav-main-publications:
     link: /developments
   - text: Digital@DAI Blog
     link: https://dai-global-digital.com/
+  - text: GH Resource Library
+    link: https://www.dai.com/resource-library
+  - text: Nigeria Resource Library
+    link: https://www.dai.com/nigeria-resource-library
