adding alumni link

--- a/src/site/_data/site.yaml
+++ b/src/site/_data/site.yaml
@@ -50,6 +50,8 @@ nav-main-working:
     link: /careers/dai-people
   - text: Why DAI
     link: /careers/why-dai
+  - text: Alumni Network
+    link: https://alumni.dai.com
 nav-main-our:
   - text: Solutions
     link: /our-work/the-solutions
