--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "js-yaml": "^4.1.0",
     "liquidjs": "^9.33.0",
     "luxon": "^2.4.0",
+    "markdown-it": "^13.0.1",
     "node-fetch": "^2.6.0",
     "tailwindcss": "^3.0.23",
     "toml": "^3.0.0"
