--- a/src/site/_data/site.yaml
+++ b/src/site/_data/site.yaml
@@ -80,3 +80,5 @@ nav-main-publications:
     link: https://www.dai.com/resource-library
   - text: Nigeria Resource Library
     link: https://www.dai.com/nigeria-resource-library
+  - text: Unburdened Podcast
+    link: /unburdened-podcast
