--- a/src/site/_data/site.yaml
+++ b/src/site/_data/site.yaml
@@ -81,4 +81,4 @@ nav-main-publications:
   - text: Nigeria Resource Library
     link: https://www.dai.com/nigeria-resource-library
   - text: Unburdened Podcast
-    link: /unburdened-podcast/
+    link: /unburdened-podcast
