--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "eleventy",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Basic starter for building eleventy sites—with an Alpine, Turbo, Tailwind stack.",
   "main": "index.js",
   "scripts": {
-    "start": "eleventy --serve --port=3000 & npx tailwindcss -i src/site/assets/tailwind.css -c tailwind.config.js -o dist/assets/style.css --watch",
+    "start": "npx @11ty/eleventy --serve --port=3000 --incremental & npx tailwindcss -i src/site/assets/tailwind.css -c tailwind.config.js -o dist/assets/style.css --watch",
     "build": "ELEVENTY_PRODUCTION=true eleventy --incremental && NODE_ENV=production npx tailwindcss -i src/site/assets/tailwind.css -c tailwind.config.js -o dist/assets/style.css --minify"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@11ty/eleventy": "^2.0.0-canary.8",
+    "@11ty/eleventy": "^2.0.0-canary.16",
     "@hotwired/turbo": "^7.1.0",
     "@jamshop/eleventy-filter-dump": "^1.0.4",
     "@tailwindcss/forms": "^0.5.1",
