--- a/src/site/_data/pop.yaml
+++ b/src/site/_data/pop.yaml
@@ -14,6 +14,8 @@ episodes:
         title: Executive CEO Office Director, Shabelle Bank, Ethiopia
       - name: Kristi Ragan
         title: Vice President of Strategic Engagement, DAI
+      - name: Zaki Raheem
+        title: Director, Sustainable Business Group, DAI
       - name: Victor Basta
         title: CEO, DAI Magister 
 
