--- a/src/site/_data/pop.yaml
+++ b/src/site/_data/pop.yaml
@@ -1,6 +1,6 @@
 episodes:
   - number: 1
-    title: Partnerships matter for growth. 
+    title: 'Episode One: Partnerships matter for growth.'
     description: |
       There’s an old African proverb that says if you want to fast, go alone, but if you want to go far, go together. In other words, people and relationships lie at the heart of success. At DAI, we depend on our partners. Not just our co-implementers and small businesses, but crucially our local partners in the countries where we work. Development is inherently local and collaborative – local leadership and participation are essential. 
     fulldesc: |
