--- a/src/site/_data/site.yaml
+++ b/src/site/_data/site.yaml
@@ -82,5 +82,5 @@ nav-main-publications:
     link: https://www.dai.com/nigeria-resource-library
   - text: Practice of Partnership
     link: /practiceofpartnership-podcast
-  - text: All Podcast Episodes
+  - text: All Podcasts
     link: /all-podcasts
